kustomize-flask-rollout-bluegreen/base/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: app-user-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"  
    nginx.ingress.kubernetes.io/configuration-snippet: |
      if ( $http_test ) {
      set $proxy_upstream_name "#USER#-app-user-preview-80";
      }  
spec:
  rules:
  - host: app-user.workshop.ezylinux.com
    http:
      paths:
      - backend:
          serviceName: app-user-active
          servicePort: 80
